見出しを変更

--- a/NablaGameClient/index.html
+++ b/NablaGameClient/index.html
@@ -8,7 +8,7 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>TypeScript HTML App</h1>
+    <h1>お絵かき！！！！！</h1>
 
     <canvas id="base_field" width="640" height="480"></canvas>
 </body>
