--- a/NablaGameClient/index.html
+++ b/NablaGameClient/index.html
@@ -11,5 +11,6 @@
     <h1>お絵かき！！！！！</h1>
 
     <canvas id="base_field" width="640" height="480"></canvas>
+    <button id="clear_button">禿げろ</button>
 </body>
 </html>
