アンドゥの実装

--- a/NablaGameClient/index.html
+++ b/NablaGameClient/index.html
@@ -12,5 +12,6 @@
 
     <canvas id="base_field" width="640" height="480"></canvas>
     <button id="clear_button">禿げろ</button>
+    <button id="undo_button">アンドゥ</button>
 </body>
 </html>
